// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rocket components should match snapshot for rockets  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rocketDisplay"
      >
        <img
          alt="rocket 1's display"
          class="rocketImage"
          src="image1"
        />
        <section
          class="rInfo"
        >
          <span
            class="title"
          >
            rocket 1
          </span>
          <p
            class="rocketpara"
          >
            description of rocket1
          </p>
          <button
            class="book"
            type="submit"
          >
            Reserve Rocket
          </button>
        </section>
      </div>
      <div
        class="rocketDisplay"
      >
        <img
          alt="rocket 2's display"
          class="rocketImage"
          src="image1"
        />
        <section
          class="rInfo"
        >
          <span
            class="title"
          >
            rocket 2
          </span>
          <p
            class="rocketpara"
          >
            description of rocket1
          </p>
          <button
            class="book"
            type="submit"
          >
            Reserve Rocket
          </button>
        </section>
      </div>
  </body>,
  "container": <div>
    <div
      class="rocketDisplay"
    >
      <img
        alt="rocket 1's display"
        class="rocketImage"
        src="image1"
      />
      <section
        class="rInfo"
      >
        <span
          class="title"
        >
          rocket 1
        </span>
        <p
          class="rocketpara"
        >
          description of rocket1
        </p>
        <button
          class="book"
          type="submit"
        >
          Reserve Rocket
        </button>
      </section>
    </div>
    <div
      class="rocketDisplay"
    >
      <img
        alt="rocket 2's display"
        class="rocketImage"
        src="image2"
      />
      <section
        class="rInfo"
      >
        <span
          class="title"
        >
          rocket 2
        </span>
        <p
          class="rocketpara"
        >
          description of rocket2
        </p>
        <button
          class="book"
          type="submit"
        >
          Reserve Rocket
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tests for rocket components check snapshot for rocket 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rocketDisplay"
      >
        <img
          alt="rocket undefineds display"
          class="rocketImage"
        />
        <section
          class="rInfo"
        >
          <span
            class="title"
          />
          <p />
          <button
            class="book"
            type="submit"
          >
            Reserve Rocket
          </button>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rocketDisplay"
    >
      <img
        alt="rocket undefineds display"
        class="rocketImage"
      />
      <section
        class="rInfo"
      >
        <span
          class="title"
        />
        <p />
        <button
          class="book"
          type="submit"
        >
          Reserve Rocket
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
